Scrollbar working moving the timeline, and moving thumb correctly :), now we need to work or in the canvas, or in the performance

--- a/src/templates/timeline/scrollbar/scrollbar.scss
+++ b/src/templates/timeline/scrollbar/scrollbar.scss
@@ -14,8 +14,17 @@
   }
 
   .scrollbar-frame {
+    position: relative;
     flex: 6;
     min-width: 0;
     box-sizing: border-box;
+
+    .thumb-container {
+      position: absolute;
+      background: #666;
+      border-radius: 5px;
+      width: 16px;
+      height: 16px;
+    }
   }
 }
